Attached req.userId

--- a/backend/package.json
+++ b/backend/package.json
@@ -32,8 +32,10 @@
   "devDependencies": {
     "@prisma/client": "^6.19.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "prisma": "^6.19.0",
