--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
     "react-router": "^7.11.0",
     "react-router-dom": "^7.10.1",
-    "shared_schemas": "^1.0.0"
+    "shared_schemas": "^1.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
