--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.11.0",
     "react-router-dom": "^7.10.1",
     "shared_schemas": "^1.0.4",
