--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/app.ts",
-    "build": "tsc && prisma generate",
-    "start": "prisma generate && node dist/app.js",
     "prisma:generate": "prisma generate",
-    "migrate:deploy": "prisma migrate deploy"
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "build": "prisma generate && tsc ",
+    "start": "prisma generate && node dist/app.js"
+    
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
