--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/app.ts",
+    "build": "prisma generate && tsc",
+    "start": "node dist/app.js",
+    "start:prod": "prisma migrate deploy && node dist/app.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
-    "build": "prisma generate && tsc ",
-    "start": "prisma generate && node dist/app.js"
-    
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
@@ -26,9 +28,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@types/node": "^24.10.1",
-    "@types/pg": "^8.15.6",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -37,6 +39,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.18.0",
+    "prisma": "^7.3.0",
     "shared_schemas": "^1.0.4",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
@@ -48,7 +52,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "prisma": "^7.3.0",
+    "@types/pg": "^8.16.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
