--- a/dummy-bank-server/package.json
+++ b/dummy-bank-server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon bank-server.js",
+    "start": "node bank-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.4",
     "ejs": "^3.1.10",
     "express": "^5.2.1"
   }
